--- a/Portfolio-WebsiteV2.0/package.json
+++ b/Portfolio-WebsiteV2.0/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
