--- a/Portfolio-WebsiteV2.0/package.json
+++ b/Portfolio-WebsiteV2.0/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@formspree/react": "^2.4.1",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
